--- a/section/terms.html
+++ b/section/terms.html
@@ -15,7 +15,7 @@
         <dt><dfn>RS</dfn> (Resource Server)</dt>
         <dd>A server that hosts and manages access to protected Open Payments resources for incoming payments, quotes, and outgoing payments.</dd>
 
-        <dt><dfn>Grant</dfn></dt>
+        <dt><dfn>Grants</dfn></dt>
         <dd>
             A delegation of authorization from a resource owner to a client, allowing the client to access protected resources or perform actions on the owner’s behalf. In Rafiki, this process is managed by the authorization server, which issues grants as access tokens. These grants permit clients to interact with Open Payments APIs to, for example, create payments and retrieve account information, based on the permissions granted by the resource owner.
         </dd>
