--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
     <div data-include="section/sotd.html" data-include-replace="true"></div>
     <div data-include="section/introduction.html" data-include-replace="true"></div>
     <div data-include="section/terms.html" data-include-replace="true"></div>
+    <div data-include="section/storage.html" data-include-replace="true"></div>
     <div data-include="section/connecting-a-wallet.html" data-include-replace="true"></div>
     <div data-include="section/algorithms.html" data-include-replace="true"></div>
+    <div data-include="section/dictionaries.html" data-include-replace="true"></div>
 </body>
 </html>
