fix(algorithms): fix broken OP links
Incorrect ReSpec usage

--- a/section/algorithms.html
+++ b/section/algorithms.html
@@ -187,7 +187,7 @@
     </div>
 
     <h3>Continue grant request</h3>
-    <p>The send a continue grant request, refers to the <a href="opas/operations/post-continue#">Open Payments grant request</a></p>
+    <p>The send a continue grant request, refers to the <a data-cite="opas/operations/post-continue#">Open Payments grant request</a></p>
     <div class="algorithm">
         When asked to <dfn>send a continue grant request</dfn>, given <var>continueUri</var>, <var>accessToken</var> perform the following steps.
         <ol>
@@ -255,7 +255,7 @@
     </div>
 
     <h3>Cancel grant request</h3>
-    <p>The cancel grant request, refers to the <a href="opas/operations/delete-continue#">Open Payments cancel grant request</a>.</p>
+    <p>The cancel grant request, refers to the <a data-cite="opas/operations/delete-continue#">Open Payments cancel grant request</a>.</p>
     <div class="algorithm">
         When asked to <dfn>send a cancel grant request</dfn>, given <var>continueUri</var>, <var>accessToken</var> perform the following steps.
         <ol>
