--- a/section/terms.html
+++ b/section/terms.html
@@ -4,7 +4,7 @@
     <dl>
         <dt><dfn>GNAP</dfn> (Grant Negotitation and Authorization Protocol)</dt>
         <dd>
-            GNAP defines a mechanism for delegating authorization to a piece of software (client), and conveying the results and artifacts of that delegation to the software. This delegation can include access to a set of APIs as well as subject information passed directly to the software. For more information, refer to the <a href="https://datatracker.ietf.org/doc/html/draft-ietf-gnap-core-protocol">GNAP specification</a>.
+            GNAP defines a mechanism for delegating authorization to a piece of software (client), and conveying the results and artifacts of that delegation to the software. This delegation can include access to a set of APIs as well as subject information passed directly to the software. For more information, refer to [[[RFC9635]]].
         </dd>
 
         <dt><dfn>AS</dfn> (Authorization Server)</dt>
