--- a/section/algorithms.html
+++ b/section/algorithms.html
@@ -364,7 +364,12 @@
                         Let <var>mediaType</var> be the result of [=header list/extract a MIME type=] and [=header list/append=] to <var>request</var>'s headers, `Content-Type` with the value <var>mediaType</var>.
                     </li>
                     <li>
-                        Compute a digest of <var>request</var>'s body using the `sha-512` algorithm. Let <var>digestValue</var> be the base64-encoded result of the computation. [=header list/Append=] to <var>request</var>'s headers, `Content-Digest` with the value <var>digestValue</var>.
+                        <p>Set the `Content-Digest` header as follows:</p>
+                        <ol>
+                            <li>Compute a digest of <var>request</var>'s body using the `sha-512` algorithm.</li>
+                            <li>Let <var>digestValue</var> be the result of the computation.</li>
+                            <li>[=Set a structured header=] with headerName `Content-Digest`, key `sha-512`, and |digestValue| as value.</li>
+                        </ol>
                     </li>
                     <li>
                         Let <var>length</var> be the length in bytes, of <var>request</var>'s body. [=header list/Append=] to <var>request</var>'s headers,  `Content-Length` with the value <var>length</var>.
@@ -374,9 +379,9 @@
             <li>
                 Let <var>components</var> be an array of strings identifying which content (headers, etc.) to include in the signature.
                 <ol>
-                    <li>Let `components` default value be `<<"@method", "@target-uri">>`.</li>
+                    <li>Let |components| initial value be `<<"@method", "@target-uri">>`.</li>
                     <li>If <var>request</var>'s headers includes the `Authorization` header, append `authorization` to <var>components</var>.
-                    <li>If <var>request</var>'s body is not `null`, append `content-lenght`, `content-digest` and `content-type` to <var>components</var>.
+                    <li>If <var>request</var>'s body is not `null`, append `content-length`, `content-digest` and `content-type` to <var>components</var>.
                 </ol>
             </li>
             <li>
@@ -395,17 +400,17 @@
                 Use `Ed25519` to sign the canonical data with <var>privateKey</var>.
             </li>
             <li>
-                Let <var>signatureValue</var> be the resulting signature, base64-encoded.
+                Let <var>signatureValue</var> be the resulting signature, as a byte sequence.
             </li>
             <li>
-                Construct the `Signature-Input` header value, including the components, the `algorithm` (`ed25519`), `keyid` and `created` and [=header list/append=] it to <var>request's</var> headers.
+                Construct the `Signature-Input` header value, including the |components|, the |algorithm|, `keyid` and `created` and [=header list/append=] it to <var>request's</var> headers with name `sig1`.
                 <div class="note">
                     <p>`keyid` represents the key identifier - <a href="#key-id">Key ID</a>.</p>
                     <p>`created` represents the creation time of the signature as a UNIX timestamp value of type Integer. Sub-second precision is not supported.</p>
                 </div>
             </li>
             <li>
-                [=header list/Append=] to <var>request</var>'s headers, `Signature` with the value <var>signatureValue</var>.
+                [=Set a structured header=] with headerName `Signature`, key `sig1`, and |signatureValue| as value.
             </li>
         </ol>
         <aside class="example" title="Signature base">
@@ -433,6 +438,23 @@
                     "hello":"world"
                 }
             </pre>
+        </aside>
+    </div>
+
+    <div class="algorithm">
+        To <dfn>set a structured header</dfn>, given a string |headerName|, a string |key|, and |value:sequence of bytes| for a |request:Request|,
+        <ol>
+            <li>Let |headerValue:structured field dictionary| be a <a data-cite="RFC9651#dictionary">structured field dictionary</a> with a single key |key| with corresponding value |value|.</li>
+            <li>Let |header| be a [=tuple=] of |headerName| and |headerValue|.</li>
+            <li>[=header list/Set a structured field value=] given |header| in the [=request/header list=] of the |request|. The |headerValue| must be <a data-cite="RFC9651#name-serializing-a-dictionary">serialized</a> as described in [[RFC9651]].</li>
+        </ol>
+
+        <aside class="example" title="Set as structured header">
+            With |headerName|=`Content-Digest`, |key|=`sha-512`, |value|=`aByteSequence`,
+            <pre class="http">
+                Content-Digest: sha-512=:X48E9qOokqqrvdts8nOJRJN3OWDUoyWxBf7kbu9DBPE=:
+            </pre>
+            Note that, the |value| is <a data-cite="RFC9651#name-serializing-a-byte-sequence">serialized as a byte sequence</a>, i.e. it is base64 encoded, and then wrapped between `:` (colon).
         </aside>
     </div>
 </section>
